[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/AppPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ShopCard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Shop.gd" type="Script" id=3]
[ext_resource path="res://Art/lessdisaster.png" type="Texture" id=4]

[node name="ShopApp" instance=ExtResource( 1 )]

[node name="Shop" type="Control" parent="." index="1"]
margin_right = 159.0
margin_bottom = 128.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Shop" index="0"]
margin_left = 21.0
margin_top = 8.0
margin_right = 132.0
margin_bottom = 121.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="GridContainer" parent="Shop/ScrollContainer" index="0"]
self_modulate = Color( 0.898039, 0.898039, 0.898039, 1 )
margin_right = 57.0
custom_constants/vseparation = 94
custom_constants/hseparation = 57
columns = 3

[node name="BetterMiningCard" parent="Shop/ScrollContainer/VBoxContainer" index="0" instance=ExtResource( 2 )]
cost = 20000.0

[node name="ColorRect" parent="Shop/ScrollContainer/VBoxContainer/BetterMiningCard" index="0"]
margin_left = 0.507542
margin_right = 54.5075

[node name="LessProblemCard" parent="Shop/ScrollContainer/VBoxContainer" index="1" instance=ExtResource( 2 )]
margin_left = 57.0
margin_right = 57.0
cost = 15000.0

[node name="ColorRect" parent="Shop/ScrollContainer/VBoxContainer/LessProblemCard" index="0"]
margin_left = 4.76837e-07
margin_top = -0.376022
margin_right = 54.0
margin_bottom = 84.624

[node name="TextureRect" parent="Shop/ScrollContainer/VBoxContainer/LessProblemCard" index="2"]
texture = ExtResource( 4 )

[node name="Label" parent="Shop/ScrollContainer/VBoxContainer/LessProblemCard" index="3"]
text = "+ Less problems"

[node name="Label2" parent="Shop/ScrollContainer/VBoxContainer/LessProblemCard" index="4"]
text = "- Problems cost more to fix"

[connection signal="pressed" from="Shop/ScrollContainer/VBoxContainer/BetterMiningCard/CheapMiningBtn" to="Shop" method="_buy_upgrade" binds= [ "CheapMining" ]]
[connection signal="pressed" from="Shop/ScrollContainer/VBoxContainer/LessProblemCard/CheapMiningBtn" to="Shop" method="_buy_upgrade" binds= [ "LessProblems" ]]

[editable path="Shop/ScrollContainer/VBoxContainer/BetterMiningCard"]
[editable path="Shop/ScrollContainer/VBoxContainer/LessProblemCard"]
